@@ -206,7 +206,7 @@ void irdp_send(struct interface *ifp,
     dst = htonl(INADDR_ALLHOSTS_GROUP);
 
   if(irdp->flags & IF_DEBUG_MESSAGES) 
-    zlog_warn("IRDP: TX Advert on %s %s/%d Holdtime=%d Preference=%d", 
+    zlog_debug("IRDP: TX Advert on %s %s/%d Holdtime=%d Preference=%d", 
 	      ifp->name,
 	      inet_ntoa(p->u.prefix4), 
 	      p->prefixlen,
@@ -254,7 +254,7 @@ int irdp_send_thread(struct thread *t_advert)
 	  timer= MAX_INITIAL_ADVERT_INTERVAL;
 
   if(irdp->flags & IF_DEBUG_MISC)
-    zlog_warn("IRDP: New timer for %s set to %u\n", ifp->name, timer);
+    zlog_debug("IRDP: New timer for %s set to %u\n", ifp->name, timer);
 
   irdp->t_advertise = thread_add_timer(zebrad.master, irdp_send_thread, ifp, timer);
   return 0;
