@@ -1,5 +1,9 @@
 2004-12-07 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
+	* *.c: Change level of debug messages to LOG_DEBUG.
+
+2004-12-07 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
 	* main.c: (main) The 2nd argument to openzlog has been removed.
 	  So stdout logging will no longer be enabled by default.
 	* irdp_main.c: (irdp_finish) Reduce severity of shutdown message
